--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"test": "ng test",
 		"lint": "ng lint",
 		"e2e": "ng e2e",
-	"postinstall": "grunt sass:production && ng build"
+		"postinstall": "grunt sass:production && ng build"
 	},
 	"engines": {
 		"node": "~6.10.3",
@@ -18,11 +18,11 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/cli": "1.2.1",
-		"@angular/compiler-cli": "^4.0.0",
 		"@angular/animations": "^4.0.0",
+		"@angular/cli": "1.2.1",
 		"@angular/common": "^4.0.0",
 		"@angular/compiler": "^4.0.0",
+		"@angular/compiler-cli": "^4.0.0",
 		"@angular/core": "^4.0.0",
 		"@angular/forms": "^4.0.0",
 		"@angular/http": "^4.0.0",
@@ -33,12 +33,11 @@
 		"core-js": "^2.4.1",
 		"express": "^4.15.4",
 		"font-awesome": "^4.7.0",
+		"grunt": "^1.0.1",
 		"rxjs": "^5.1.0",
 		"zone.js": "^0.8.4"
 	},
 	"devDependencies": {
-		"@angular/cli": "1.2.1",
-		"@angular/compiler-cli": "^4.0.0",
 		"@angular/language-service": "^4.0.0",
 		"@types/jasmine": "~2.5.53",
 		"@types/jasminewd2": "~2.0.2",
