--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"test": "ng test",
 		"lint": "ng lint",
 		"e2e": "ng e2e",
-		"postinstall": "grunt sass:production && ng build"
+		"postinstall": "ng build"
 	},
 	"engines": {
 		"node": "~6.10.3",
