--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
 		"core-js": "^2.4.1",
 		"express": "^4.15.4",
 		"font-awesome": "^4.7.0",
+		"g": "^2.0.1",
 		"grunt": "^1.0.1",
+		"http-server": "^0.10.0",
 		"rxjs": "^5.4.3",
 		"zone.js": "^0.8.17"
 	},
