--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@angular/platform-browser": "^4.3.6",
 		"@angular/platform-browser-dynamic": "^4.3.6",
 		"@angular/router": "^4.3.6",
+		"angular2-cookie": "^1.2.6",
 		"bootstrap": "^4.0.0-beta",
 		"core-js": "^2.4.1",
 		"express": "^4.15.4",
