--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"g": "^2.0.1",
 		"grunt": "^1.0.1",
 		"http-server": "^0.10.0",
+		"ng2-cookies": "^1.0.12",
 		"rxjs": "^5.4.3",
 		"zone.js": "^0.8.17"
 	},
