--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"grunt": "^1.0.1",
 		"http-server": "^0.10.0",
 		"ng2-cookies": "^1.0.12",
+		"push.js": "^1.0.5",
 		"rxjs": "^5.4.3",
 		"zone.js": "^0.8.17"
 	},
